test/zinc_source/compile_errors/collections/01_ambiguous_empty_collection.zn
// expected-error: ambiguous

fn main() {
    a = {}
}
